[package]
name = "to-nothing"
version = "0.1.0"
edition = "2021"
authors = ["Moonlit Works <contact@moonlit.works>"]
readme = "README.md"
license-file = "LICENSE"
keywords = ["moonlitworks", "bevy", "gamedev", "rpg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
serde = "1.0"
rand = "0.8.5"
winit = "0.27.5"
image = "0.24.5"
bevy_ecs_tilemap = "0.9"
bevy_ecs_ldtk = "0.5"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"

[package.metadata.commands]
run = "cargo watch -i assets -i target -- cargo run"
build = "cargo build --release"
